<resources>
    <string name="app_name">Les Horaires</string>

    <string name="about">À propos</string>
    <string name="settings">Paramètres</string>
    <string name="jour">Jour</string>
    <string name="ouverture">Ouverture</string>
    <string name="fermeture">Fermeture</string>
    <string name="vider">Retrourner aux favoris</string>
    <string name="favoris">Favoris</string>
    <string name="what">Quoi ?</string>
    <string name="listvide">Votre liste de magasins est vide.</string>
    <string name="save">Sauvegarder</string>
    <string name="where">Où ?</string>
    <string name="find">Chercher</string>
    <string name="descriptionHoraire">Horaires</string>
    <string name="descriptionButtonGps">Boutton GPS</string>
    <string name="descriptionWifi">Wifi</string>
    <string name="descriptionParking">Parking</string>
    <string name="descriptionHandi">Mobilité réduite</string>
    <string name="descriptionCall">Appeler</string>
    <string name="descriptionMap">Maps</string>
    <string name="changelog_full_title">Changements</string>
    <string name="changelog_title">Nouveautés</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">Plus…</string>
    <string name="contact">Contacter le dev</string>
    <string name="time_slot_error">Merci d\'utiliser des tranches de 5 minutes maximum</string>
    <string name="success_update_shop">Mise à jour effectuée!</string>
    <string name="resultatRechercheVide">Aucun résultat n\'a été trouvé</string>
    <string name="fail_localize_user">Petit soucis lors de la localisation</string>
    <string name="fail_fill_form">Oops. Préciser ce que vous rechercher d\'abord</string>
    <string name="fail_connexion">Oops. Aucune connexion à internet. Utilisez vos favoris</string>
    <string-array name="days_arrays">
        <item>Lundi</item>
        <item>Mardi</item>
        <item>Mercredi</item>
        <item>Jeudi</item>
        <item>Vendredi</item>
        <item>Samedi</item>
        <item>Dimanche</item>
    </string-array>
</resources>
