<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="192sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/descriptionHoraire"
        android:elevation="1dp"/>

    <TextView
        android:id="@+id/shopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="208dp"
        android:textColor="@color/accent"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/shopAdress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shopName"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/shopOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shopAdress"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginTop="20sp"
        android:textColor="@color/text_dark"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/shopStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shopOpen"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginTop="8sp"
        android:textColor="@color/text_dark"/>

    <LinearLayout
        android:id="@+id/imageStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shopStatus"
        android:layout_marginBottom="16sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginTop="16sp"
        android:elevation="1dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/wifi"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:contentDescription="@string/descriptionWifi"
            android:focusable="false"
            android:src="@mipmap/wifi"
            />

        <ImageView
            android:id="@+id/parking"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:contentDescription="@string/descriptionParking"
            android:src="@mipmap/parking"/>

        <ImageView
            android:id="@+id/handi"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:contentDescription="@string/descriptionHandi"
            android:src="@mipmap/handi"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageStatus"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16sp"
        android:layout_marginRight="16sp"
        android:contentDescription="@string/descriptionCall"
        android:elevation="1dp"
        android:src="@mipmap/call"
        />

    <ImageButton
        android:id="@+id/gpsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/callButton"
        android:layout_marginRight="16sp"
        android:layout_toLeftOf="@+id/callButton"
        android:layout_toStartOf="@+id/callButton"
        android:contentDescription="@string/descriptionMap"
        android:elevation="1dp"
        android:src="@mipmap/map"
        />

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_create_black_24dp"
        fab:fab_colorNormal="@color/accent"
        fab:fab_colorPressed="@color/primary_dark"/>

</RelativeLayout>