<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:wheel="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginTop="50sp"
        android:text="@string/what"
        android:textColor="@color/text_dark"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="16sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginTop="16sp"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/primary_dark"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginTop="50sp"
        android:text="@string/where"
        android:textColor="@color/text_dark"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginTop="16sp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:singleLine="true"
        android:textColor="@color/primary_dark"/>

    <Button
        android:id="@+id/searchAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/location"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="73dp"
        android:text="@string/find"
        android:textColor="@color/accent"/>

    <ImageButton
        android:id="@+id/gpsAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/searchAction"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16sp"
        android:contentDescription="@string/descriptionButtonGps"
        android:src="@android:drawable/ic_menu_compass"
        />

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elevation="1dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            wheel:matProg_barColor="#5588FF"
            wheel:matProg_progressIndeterminate="true"/>
    </RelativeLayout>

</RelativeLayout>